# api

./: .env  Cargo.toml  LICENSE  diesel.toml  flake.nix
migrations/2025-07-07-130152_create_tag/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs  settings.rs
src/models/: api.rs  auth.rs  message.rs  mod.rs  tag.rs
src/routers/v1/: auth.rs  mod.rs  route.rs  tag.rs
src/services/: auth.rs
