[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.11", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tokio = { version = "1.46.1", features = [ "rt-multi-thread" ] }
uuid = { version = "1.17.0", features = ["serde"] }
